ensure subscript and word don't wrap

--- a/src/css/word.css
+++ b/src/css/word.css
@@ -28,6 +28,10 @@
     }
 }
 
+.word-and-subscript {
+    text-wrap: nowrap;
+}
+
 .word {
     transition: ease 150ms;
     border-radius: 3px;
